# ha-market-prediction

./: .env.example  .flake8  .gitignore  CHANGELOG.md  INSTALLATION.md  LICENSE  README.md  enhanced-coordinator.md  hacs.json  installation-guide.md  manifest.json  requirements.txt  run.bat  setup.cfg
.github/: FUNDING.yml
.github/workflows/: test-comprehensive.yml  test-continue-on-error.yml  test-skip-flake8.yml  validate.yaml
config/: setup.cfg
custom_components/ha_market_predictor/: __init__.py  config_flow.py  const.py  coordinator.py  sensor.py  services.yaml
custom_components/market_prediction/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
docs/: INSTALL.md  STRUCTURE.md
pyscript/: market_predictor.py
scripts/: start.bat  start.sh
src/: market_predictor.py
