[flake8]
ignore = E501,W503,E203
max-line-length = 120
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    venv,
    .venv

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts = -v --tb=short

[metadata]
name = market-prediction-system
version = 2.3.0
description = Advanced market prediction system with API rate limiting
author = HA Market Predictor
license = MIT
